# dm-fall-2023

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Natural/: NZER_N_B.cpp  SUB_NN_N.cpp
examples/: calculator.cpp  main.cpp
include/: CLS.h  INTEGER.h  NATURAL.h  POLINOM.h  POLYNOMIAL.h  RATIONAL.h
python/: CASystem.py  module.cpp  setup.py
src/: CMakeLists.txt  NATURAL.h  main.cpp
src/Baza/: CMakeLists.txt  main.cpp
src/Baza/lib/: CMakeLists.txt  num.cpp  num.h  polinom.cpp  polinom.h  rational_fraction.cpp  rational_fraction.h  u_num.cpp  u_num.h
src/Integer/: ABS_Z_N.cpp  ABS_Z_Z.cpp  ADD_ZZ_Z.cpp  DIV_ZZ_Z.cpp  INTEGER.cpp  INTEGER.h  MOD_ZZ_Z.cpp  MUL_ZM_Z.cpp  MUL_ZZ_Z.cpp  POZ_Z_D.cpp  SUB_ZZ_Z.cpp  TRANS_N_Z.cpp  TRANS_Z_N.cpp
src/Natural/: ADD_1N_N.cpp  ADD_NN_N.cpp  CMakeLists.txt  COM_NN_D.cpp  COM_NN_D.h  DIV_NN_Dk.cpp  DIV_NN_N.cpp  GCF_NN_N.cpp  LCM_NN_N.cpp  MOD_NN_N.cpp  MUL_ND_N.cpp  MUL_NN_N.cpp  MUL_Nk_N.cpp  NATURAL.cpp  NATURAL.h  NZER_N_B.cpp  SUB_NDN_N.cpp  SUB_NN_N.cpp  main.cpp
src/Polinom/: LED_P_Q.cpp  LED_P_Q.h  POLINOM.cpp  POLINOM.h
src/Polynomial/: ADD_PP_P.cpp  DEG_P_N.cpp  DEP_P_P.cpp  DIV_PP_P.cpp  FAC_P_Q.cpp  GCF_PP_P.cpp  LED_P_Q.cpp  MOD_PP_P.cpp  MUL_PP_P.cpp  MUL_PQ_P.cpp  MUL_Pxk_P.cpp  NMR_P_P.cpp  OPERATORS.cpp  POLYNOMIAL.cpp  SUB_PP_P.cpp
src/RATIONAL/: RATIONAL.cpp  RATIONAL.h
src/Rational/: ADD_QQ_Q.cpp  DIV_QQ_Q.cpp  INT_Q_B.cpp  INV_Q_Q.cpp  MUL_QQ_Q.cpp  OPERATORS.cpp  RATIONAL.cpp  RED_Q_Q.cpp  SUB_QQ_Q.cpp  TRANS_Q_Z.cpp  TRANS_Z_Q.cpp
tests/: integer_test.cpp  natural_test.cpp  polynomial_test.cpp  rational_test.cpp
